busybox.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: busybox-deployment
  namespace: default
spec:
  selector:
    matchLabels:
      app: bookstore
      role: api
  replicas: 2 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: bookstore
        role: api  # Correctly indented label
    spec:
      containers:
        - name: busybox
          image: busybox:latest
          command:
            - sleep
            - "3600000"
          ports:
            - containerPort: 80
